[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/TriangleCut/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://games/TriangleCut/Main.gd" type="Script" id=2]
[ext_resource path="res://games/TriangleCut/Enemy.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 150, 0 )
current = true

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 293, 0 )

[node name="PlayerHP" type="Label" parent="."]
margin_left = -162.0
margin_top = -170.0
margin_right = -88.0
margin_bottom = -156.0
text = "Your HP: 10"

[node name="PlayerAtk" type="Label" parent="."]
margin_left = -78.0
margin_top = -170.0
margin_right = 13.0
margin_bottom = -156.0
text = "Current ATK: 0"

[node name="PlayerDef" type="Label" parent="."]
margin_left = -78.0
margin_top = -150.0
margin_right = 13.0
margin_bottom = -136.0
text = "Current Def: 0"

[node name="PlayerAP" type="Label" parent="."]
margin_left = -162.0
margin_top = -153.0
margin_right = -88.0
margin_bottom = -139.0
text = "Your AP: 1"

[connection signal="actions" from="Grid" to="." method="_on_Grid_actions"]
